# pure_zip

./: Cargo.toml  LICENSE  README.md
doc/: PKWARE_APPNOTE.txt
src/: lib.rs
tests/: official_zip_files.rs
