[package]
name = "pure_zip"
version = "0.1.0"
authors = ["Sam Stelfox <sstelfox@bedroomprogrammers.net>"]
license = "MIT"
repository = "https://github.com/sstelfox/pure_zip.git"
keywords = ["archive", "compress", "decompress", "zip"]
description = """
A rust library for handling unruly Zip archives. This library specializes in
being highly compatible with other Zip archive producers and dealing both with
files that fully conform to the produced specifications as well as those
that... take shortcuts...
"""
edition = "2018"

[dependencies]
